--- a/posts/2025-11-20-food-web-measurement-2/index.qmd
+++ b/posts/2025-11-20-food-web-measurement-2/index.qmd
@@ -64,12 +64,13 @@ $$
 \begin{align}
 A_{ij,k} &\sim \text{Bernoulli}(q_{ij,k}) \\
 q_{ij,k} &= p_k \pi_{ij,k} \\
-p_k &= \text{logit}^{-1}(\mu_{p} + \delta_{p,k}) \\
+p_k &= \text{logit}^{-1}(\mu_{p} + \sigma_p p^{(z)}_k) \\
 \pi_{ij,k} &= \text{logit}^{-1}(\alpha_k + u_{i,k} + v_{j,k}) \\
 \alpha_k &= \mu_{\alpha} + \sigma_{\alpha} \alpha^{(z)}_k \\ 
 u_{i,k} &= \sigma_u u^{(z)}_{i,k} \\ 
 v_{j,k} &= \sigma_v v^{(z)}_{j,k} \\ 
-p^{(z)}_k, \alpha^{(z)}_k, u^{(z)}_{i,k},v^{(z)}_{j,k} &\sim \mathcal{N}(0,1) 
+p^{(z)}_k, \alpha^{(z)}_k, u^{(z)}_{i,k},v^{(z)}_{j,k} &\sim \mathcal{N}(0,1) \\ 
+\sigma_p,\sigma_{\alpha},\sigma_u, \sigma_v &\sim \text{Exponential}(1)
 \end{align}
 $$
 
